--- a/src/modules/application/application.css
+++ b/src/modules/application/application.css
@@ -7,3 +7,39 @@
   grid-template-rows: auto auto 1fr;
   height: 100dvh;
 }
+
+nav {
+  display: grid;
+  grid-template-columns: 1fr auto auto auto auto;
+}
+
+main {
+  display: grid;
+  grid-template-columns: 1fr auto auto auto auto;
+}
+
+main aside {
+  display: grid;
+  grid-template-columns: 0;
+  transition: grid-template-columns 0.5s ease-in-out;
+  overflow: clip;
+  max-height: calc(100dvh - 100px);
+  overflow-y: auto;
+}
+
+main aside > * {
+  padding: 0.25em;
+}
+
+main aside.show {
+  grid-template-columns: auto;
+  min-width: 30ch;
+}
+
+main aside.hide * {
+  visibility: hidden;
+}
+
+aside.active {
+  font-weight: bold;
+}
